# users-service/index.js
@@ -4,17 +4,21 @@ const swaggerUi = require('swagger-ui-express')
 const swaggerFile = require('./swagger-output.json')
 const authRouter = require('./routes/auth')
 const entrepriseRouter = require('./routes/listeEntreprise')
+require('dotenv').config()
+
 const mongoose = require('mongoose')
-mongoose.connect('mongodb://127.0.0.1:27017/Connect').then(() => {
-  console.log('Users connected To DB')
-})
+mongoose
+  .connect(
+    'mongodb+srv://user18:arwxcjkytqQegca6@cluster0.aykhi.mongodb.net/Connect?authMechanism=DEFAULT'
+  )
+  .then(() => {
+    console.log('Users connected To DB')
+  })
 const cors = require('cors')
 app.use(express.json())
 app.use(cors())
 app.use('/swagger', swaggerUi.serve, swaggerUi.setup(swaggerFile))
-app.get('/a', (req, res) => {
-  res.send({ a: req.query.filter })
-})
+
 app.use('/', authRouter)
 app.use('/entreprise', entrepriseRouter)
 app.listen(5002, () => {
