# users-service/routes/auth.js
@@ -2,6 +2,7 @@ const axios = require('axios')
 const express = require('express')
 const upload = require('../../uploadMiddleware')
 const bcrypt = require('bcrypt')
+var jwt = require('jsonwebtoken')
 const saltRounds = 10
 
 const User = require('../models/user')
@@ -46,7 +47,7 @@ router.post('/login', (req, res) => {
   }
 })
 
-router.post('/register', (req, res) => {
+router.post('/register', upload.single('photo'), (req, res) => {
   /*
    * #swagger.tags = ['Register']
    */
@@ -56,6 +57,8 @@ router.post('/register', (req, res) => {
       email,
       password,
       tel,
+      firstName,
+      lastName,
       adresse,
       role,
       photo,
@@ -83,7 +86,7 @@ router.post('/register', (req, res) => {
             tel,
             adresse,
             role,
-            photo,
+            photo: req.file ? req.file.filename : null,
             dateNaissance,
             cp,
             ville,
@@ -125,7 +128,8 @@ router.put('/:id', upload.single('photo'), async (req, res) => {
       password,
       tel,
       role,
-      photo,
+      firstName,
+      lastName,
       deletedAt,
       blockedAt,
       dateNaissance,
@@ -138,6 +142,8 @@ router.put('/:id', upload.single('photo'), async (req, res) => {
     const user = await User.findById(req.params.id)
     if (user) {
       Object.assign(user, {
+        firstName: firstName ? firstName : user.firstName,
+        lastName: lastName ? lastName : user.lastName,
         email: email ? email : user.email,
         password: password ? password : user.password,
         tel: tel ? tel : user.tel,
@@ -175,13 +181,71 @@ router.post('/search', async (req, res) => {
 })
 
 router.post('/restore', async (req, res) => {
+  /*
+   * #swagger.tags = ['Restore']
+   */
   const { idList } = req.body
   const users = await User.find(idList && { _id: idList })
   users.map(async (u) => {
     u.deletedAt = null
+    u.blockedAt = null
     result = await u.save()
     return result
   })
   res.send(users)
 })
+
+router.post('/add_user', upload.single('photo'), async (req, res) => {
+  // if (!req.headers.authorization) {
+  //   return res.status(403).json({ error: 'No credentials sent!' })
+  // }
+  // var token = jwt.sign({ foo: 'bar' }, process.env.JWT_KEY)
+  // // var token = req.headers.authorization.split(' ')[1]
+  // jwt.verify(token, process.env.JWT_KEY, (err, decoded) => {
+  // if (err) {
+  //   res.send('wrong token')
+  //   return
+  // } else
+  {
+    const { firstName, lastName, dateNaissance, civilité, email, role } =
+      req.body
+    axios
+      .post('http://localhost:5000/api/auth/register', {
+        email,
+        password: 'password',
+      })
+      .then(async (response) => {
+        if (response.data.customData) {
+          if (
+            response.data.customData.message ===
+            'FirebaseError: Firebase: Error (auth/email-already-in-use).'
+          ) {
+            res.status(402).send('email already used')
+          }
+        } else {
+          const hashedPassword = bcrypt.hashSync('password', saltRounds)
+          const user = new User({
+            uid: response.data.uid,
+            email,
+            password: hashedPassword,
+            firstName,
+            lastName,
+            dateNaissance,
+            civilité,
+            photo: req.file ? req.file.filename : null,
+            role,
+          })
+          user
+            .save()
+            .then((response) => {
+              res.send(response)
+            })
+            .catch((error) => {
+              res.send({ message: error.message })
+            })
+        }
+      })
+  }
+})
+
 module.exports = router
